Fix Dynamic Fade toggle and organized settings.
Fix Dynamic Fade toggle and organized settings.
- Dynamic Fade wouldn't update properly when being changed. This has now been fixed
- Organized how settings are managed internally, with the goal of making it extremely easy to add new settings.

--- a/html/ui.html
+++ b/html/ui.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@100;300&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link rel="stylesheet" href="style.css">
-    <script src="./script.js"></script>
+    <script onload='loadDefaults();' src="./script.js"></script>
   </head>
 
 <body>
