Fix issues caused from rename
Fix issues caused from rename

--- a/html/ui.html
+++ b/html/ui.html
@@ -14,7 +14,7 @@
 
 <body>
   <div class="dmgmenu" hidden>
-    <h1 id="toptext">EWDamageNumbers by Elena Winters</h1>
+    <h1 id="toptext">twiliDamageIndicators by Elena Winters</h1>
     <!-- <input type="checkbox" id="toptextcheck" class="cm-toggle" onclick="testtoggle(this.checked)" checked>
     <label for="toptext"><span style="font-size: 17.5px;"></span>Enabled</label> -->
     <br>
